refactor(solicitudes): unificar controladores de admin y alumno
- Se fusionan SolicitudController y AdminController para evitar colisiones de rutas.
- Se actualizan los endpoints en el frontend para apuntar a /api/solicitudes.